# cogenie

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
cogenie/: __init__.py  settings.py
cogenie/adapters/: repository.py
cogenie/consumers/: consumer__schema_one_v1.py  consumer__schema_one_v2.py  consumer__schema_two_v1.py
cogenie/domain/: model.py
cogenie/entrypoints/: cli.py  generate.py
cogenie/service_layer/: consumer.template  consumer_generator.py
consumers/: consumer__login_v1.py  consumer__notfound_v1.py  consumer__pageview_v1.py  consumer__registration_v1.py  consumer__sale_complete_v1.py
