[tool.poetry]
name = "cogenie"
version = "0.1.0"
description = ""
authors = ["Antonio <antonio.one@pm.me>"]
license = "TBC"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
requests = "^2.25.1"
python-decouple = "^3.4"
datcat = "^0.1.3"
click = "^7.1.2"
google-cloud-bigquery = ">=1.6.0,<2"
apache-beam = {extras = ["gcp"], version = "^2.28.0"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.8.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
